===2015/09/01===
moved eventlistener additions to initializeMessages()
moved styles for ".avt", ".collection-item.avatar p" to extraCSS
change the var materialCSS from string to array for better legibility
added hci favicon
compiled min js and chrome ext (v3.1.1)

===2015/08/30===
added grabbable and unselectable classes to toasts**
added unselectable to "no new messages"**

===2015/08/29===
fixed marking bug (it was due to sending value of submit button)
added responses
added indeterminate radio button
fixed toasting
fixed height of .msgcontent (added -35px)
fixed unselectable issues (bzg. more_vert, no new messages)
fixed EMB Help unclickable (it was due to posted messagess overlaying on top of it, so there were no pointer events)
added chrome support (with run_at document start)
made the cursor focus on userid on login screen

===LEGEND===
*	Did not recompile chrome extension
**	Did not recompile min.js and chrome extension

[all changes with * and ** will be propogated upon next compile]